--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h3
 {
   margin:0; 
   font-size: 45px;
+  -webkit-text-stroke: 2px #121013;
   margin-bottom: 20px;
   text-align: center;
   background: repeating-linear-gradient(
